2003-07-02  Ross Burton  <ross@burtonini.com>

	* src/sj-util.h:
	* src/sj-util.c:
	Added eject_cdrom(). Non-linux types please submit patches to make
	this work for you!

	* src/sj-main.c:
	Use eject_cdrom() instead of running system("eject").

2003-07-02  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Remove the use of frames as some themes insist on drawing the
	lines. This patch mostly from Bastien Nocera, I just tweaked the
	borders.

2003-07-01  Arafat Medini <lumina@silverpen.de>

	* configure.in: Added "ar" Arabic to ALL_LINGUAS.

2003-06-30  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Free the old pipeline.

2003-06-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	Removed build-time checks for MP3 encoders.

	* src/sj-extractor.c:
	Do a run-time check on the MPEG encoder.
	
	* src/sound-juicer.h: added a define for the use_http_proxy entryy
	* src/sj-main.c:
	Fix the proxy settings not being used for the first time, fix
	use_http_proxy being ignored.
	
	* src/sj-musicbrainz.c:
	Fix disabling proxies the settings, added an error message in
	sj_musicbrainz_list_albums().

2003-06-29  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added fr to ALL_LINGUAS.

2003-06-24  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Version 0.4.1. Whoops.

	* NEWS:
	Ditto.

2003-06-24  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Add a Rip Completed dialog, which can also open the folder the
	files were ripped into.

2003-06-24  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Remove the Quality setting which doesn't do anything. Whoops.
	
2003-06-24  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Version 0.4.
	
	* NEWS
	Updated for 0.4.

2003-06-24  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Really fix artist renaming. Old fix was leaking still.

2003-06-18  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add CD->Eject
	