@@ -1,5 +1,10 @@
 2003-07-02  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-utils.c:
+	Whoops, close the opened fd...
+
+2003-07-02  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-util.h:
 	* src/sj-util.c:
 	Added eject_cdrom(). Non-linux types please submit patches to make
